# navi_visual

./: .gitignore  Makefile  README.md  config.def.toml  config.toml  dummy_frames.txt  dummy_path_gen.py  main.py  ptest.py  pyproject.toml  review_app.py  run.sh  start.sh  test_usb.ipynb  viper_main_simple.py
data/: dummy_frames_gen.py  dummy_path.txt
logs/: log_20260422_103806.txt  log_20260422_104723.txt  log_20260422_104752.txt  log_20260422_111001.txt  log_20260422_111220.txt  log_20260422_112406.txt  log_20260422_113428.txt  log_20260422_113443.txt  log_20260422_133306.txt  log_20260422_142310.txt  log_20260422_143207.txt  log_20260422_143330.txt  log_20260422_143611.txt  log_20260422_143722.txt  log_20260422_143754.txt  log_20260422_144009.txt  log_20260422_144122.txt  log_20260422_150326.txt  log_20260423_003215.txt  log_20260423_003238.txt  log_20260423_003952.txt  log_20260423_004205.txt  log_20260423_004325.txt  log_20260423_004441.txt  log_20260423_004637.txt
modules/: __init__.py  ai_analyzer.py  config.py  data_package.py  dummy_path_visualizer.py  gl_widget.py  green_probe_data_flow.py  logger.py  logo.py  network.py  ui.py  video_thread.py
viper_signal/: protocol_notes.md  scripts_overview.md  viper_main.py  viper_print_stream.py  viper_ui.cpp  viper_ui_display.py  viper_usb.cpp  viper_usb_comm.py  viper_usb_continuous.py  vpr_simp_term
viper_signal/trace/: viper_trace_20251221_191550.json  viper_trace_20251221_191836.json  viper_trace_20260310_142313.json  viper_trace_20260419_183604.json  viper_trace_20260420_112204.json  viper_trace_20260421_214051.json  (+2 more)
(+1 files in other folders)
