[project]
name = "navi-visual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyopengl>=3.1.9",
    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "roma>=1.5.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tomli-w>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
