[project]
name = "navi-visual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pyopengl>=3.1.10",
    "PySide6==6.7",
    "pyusb>=1.2.1",
    "requests>=2.32.5",
    "roma>=1.5.4",
    "tomli-w>=1.2.0",
    "torch==2.2.2",
    "torchvision>=0.17.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
